--- a/app/src/main/res/layout/activity_breed.xml
+++ b/app/src/main/res/layout/activity_breed.xml
@@ -1,9 +1,15 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context="nyc.c4q.final_android_practical_assessment.BreedActivity">
 
-</android.support.constraint.ConstraintLayout>
+    <TextView
+        android:id="@+id/welcome_user_textView"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:textSize="@dimen/welcome_user_text_size"/>
+
+</LinearLayout>
