--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -7,4 +7,7 @@
     <dimen name="activity_horizontal_margin">16dp</dimen>
     <dimen name="activity_vertical_margin">16dp</dimen>
     <dimen name="welcome_user_text_size">25sp</dimen>
+    <dimen name="layout_margin">8dp</dimen>
+    <dimen name="cardview_margin_top">8dp</dimen>
+    <dimen name="textview_margin_left">8dp</dimen>
 </resources>
