--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -10,4 +10,6 @@
     <dimen name="layout_margin">8dp</dimen>
     <dimen name="cardview_margin_top">8dp</dimen>
     <dimen name="textview_margin_left">8dp</dimen>
+    <dimen name="dog_item_view_width">100dp</dimen>
+    <dimen name="dog_item_view_height">100dp</dimen>
 </resources>
