--- a/app/src/main/res/layout/activity_dogs.xml
+++ b/app/src/main/res/layout/activity_dogs.xml
@@ -19,6 +19,7 @@
     <android.support.v7.widget.RecyclerView
         android:id="@+id/dog_recyclerview"
         android:layout_marginTop="@dimen/login_margin_top"
+        android:layout_gravity="center"
         android:layout_width="match_parent"
         android:layout_height="wrap_content">
 
