--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -12,4 +12,10 @@
     <dimen name="textview_margin_left">8dp</dimen>
     <dimen name="dog_item_view_width">100dp</dimen>
     <dimen name="dog_item_view_height">100dp</dimen>
+    <dimen name="image_view_height">100dp</dimen>
+    <dimen name="elevation">8dp</dimen>
+    <dimen name="radius">2dp</dimen>
+    <dimen name="dog_breed_name_text_size">25sp</dimen>
+    <dimen name="image_view_width">100dp</dimen>
+    <dimen name="card_view_height">100dp</dimen>
 </resources>
